# Canada-Labour-Research-Assistant-RagLess

./: chatbot_app.py  config.py  db_config.py  pyproject.toml  requirements.txt  run_app_ollama.sh  run_app_vllm.sh
.setup_vllm/: pyproject.toml
setup/ollama_build/: full_install_and_launch_pipeline.sh
setup/vllm_build/: full_install_and_launch_pipeline.sh
src/: citation.py  context.py  local_vllm.py  remote.py  tools.py
styles/: style.css
