[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'CLaRA_v1'
dynamic = ['version']
authors = [{name='Pierre-Olivier Bonin'},
           {name='Marc-André Allard'}]
description = 'RAG-powered AI Research Assistant leveraging a ChromaDB vector database, a Streamlit frontend and an Ollama backend.'
readme = 'README.md'
requires-python = '== 3.12.*'
dependencies = [
    'ollama==0.4.2',
    'protobuf==4.25.8',
    'streamlit==1.45.1'
    ]

[tool.setuptools.packages.find]
where = ["src/"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
